force-app/main/default/objects/Field_Mapping__c/fields/JSON_Sobject_Name__c.field-meta.xml
<CustomField>
    <fullName>JSON_Sobject_Name__c</fullName>
    <label>JSON Sobject Name</label>
    <type>TextArea</type>
</CustomField>