force-app/main/default/objects/Field_Mapping__c/fields/NetSuite_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Field_API_Name__c</fullName>
    <label>NetSuite Field API Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>