force-app/main/default/objects/Field_Mapping__c/fields/SFDC_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Field_API_Name__c</fullName>
    <label>SFDC Field API Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>