force-app/main/default/objects/Field_Mapping__c/fields/SObject_Mapping__c.field-meta.xml
<CustomField>
    <fullName>SObject_Mapping__c</fullName>
    <label>SObject Mapping</label>
    <referenceTo>SObject_Mapping__c</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>