force-app/main/default/objects/Field_Mapping__c/fields/Sublist__c.field-meta.xml
<CustomField>
    <fullName>Sublist__c</fullName>
    <label>Sublist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>