force-app/main/default/objects/Field_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>SFDC_Field_API_Name__c</columns>
    <columns>NetSuite_Field_API_Name__c</columns>
    <columns>SObject_Mapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>